# fb-utils

./: LICENSE  README.md
cpp/: azimuth_rotary.hpp  base64_utils.hpp  build_info.cpp  build_info.hpp  denormals.hpp  elevation_rotary.hpp  fbu_assert_cpp11.hpp  filesystem_utils.hpp  math_utils.hpp  sad.hpp  shmem.hpp  simple_meter.cpp  simple_meter.hpp  singleton.hpp  stopwatch.hpp  string_utils.hpp  time_limited.hpp  time_utils.hpp  tooltip_component.hpp
include/fbu/: assert_cpp11.hpp  azimuth_rotary.hpp  base64_utils.hpp  build_info.cpp  build_info.hpp  complex.hpp  denormals.hpp  deprecated.hpp  elevation_rotary.hpp  filesystem_utils.hpp  lang_utils.hpp  math_float_constants.hpp  math_utils.hpp  multichannel_meters.hpp  possible_error.hpp  read_write_mutex.hpp  shmem.hpp  simple_meter.cpp  simple_meter.hpp  singleton.hpp  stopwatch.hpp  vector2.hpp  (+6 more)
test/: CMakeLists.txt  build_and_run_tests.sh  mac_build_and_run_tests.sh  main.cpp  old_build_and_run_tests.sh  test_assert_cpp11.cpp  test_build_info.cpp  test_build_info.shortcut.cpp  test_filesystem_utils.cpp  test_math_utils.cpp  test_read_write_mutex.cpp  test_shmem.cpp  test_string_utils.cpp  test_thread_pool.cpp  test_thread_pool.hpp  test_time_utils.cpp  update_lest.sh
test/src/: main.cpp  test_complex.cpp  test_denormals.cpp  test_deprecated.cpp  test_filesystem_utils.cpp  test_lang_utils.cpp  test_math_float_constants.cpp  test_possible_error.cpp  test_read_write_mutex.cpp  test_sad.shortcut.cpp  test_singleton.cpp  test_stopwatch.cpp  test_thread_pool.cpp  test_vector2.cpp  test_vector3.cpp  tests_common.hpp
